--- a/classmateTable.html
+++ b/classmateTable.html
@@ -48,6 +48,7 @@
         <th>Gender</th>
         <th>Garlic</th>
         <th>Complexion</th>
+        <th>Shadow</th>
       </tr>
     </thead>
     <tbody>
@@ -56,12 +57,14 @@
         <td>Female</td>
         <td>Yes</td>
         <td>Brown</td>
+        <td>Yes</td>
       </tr>
       <tr>
         <td>Brian</td>
         <td>Male</td>
         <td>No</td>
         <td>Pale</td>
+        <td>no</td>
       </tr>
     </tbody>
     <tfoot>
@@ -70,6 +73,7 @@
         <td>Male</td>
         <td>No</td>
         <td>Brown</td>
+        <td>Yes</td>
       </tr>
     </tfoot>
   </table>
