--- a/ThresholdBase.html
+++ b/ThresholdBase.html
@@ -44,7 +44,7 @@
         complexion = 0;
       }
 
-      var status = (garlic + shadow + complexion > 6) ? "yes":"not sure";
+      var status = (garlic + shadow + complexion > 6) ? "classmate is vampire":"not sure if classmate is vampire";
         
     window.alert(status);
     }
