--- a/classmateTable.html
+++ b/classmateTable.html
@@ -69,7 +69,7 @@
     </tbody>
     <tfoot>
       <tr>
-        <td>Khyree</td>
+        <td>Khyre</td>
         <td>Male</td>
         <td>No</td>
         <td>Brown</td>
