--- a/ThresholdBase.html
+++ b/ThresholdBase.html
@@ -90,7 +90,6 @@
     }
   </script>
 
-  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -170,10 +169,10 @@
       }
 
     }
-  </script>
+    //START TABLE INFO
+</script>
 </head>
 <body>
-
 
 <div class="container">
   <h2>Form control: input</h2>
