--- a/RandomGuess.html
+++ b/RandomGuess.html
@@ -2,16 +2,33 @@
 <html lang="en">
 <head>
   <title>Random Guess</title>
-</head>
-<body>
-    function getRandomInt(min,max) {
-        min = Math.cell(min);
+  
 
-        max = Math.floor(max)
+    <!--  Google Chart library -->
+ <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+ <script type="text/javascript"></script>
+ <script src="Script.js"></script>
 
-        return Math.floor(Math.random() *(max - min + 1)) + min;
+
+
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
  
-    }
+
+</head>
+<body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <button class="btn btn-primary" onclick="getRandomInt()">Submit</button>
+    
 </body>
+
+
 </html>
