--- a/ThresholdBase.html
+++ b/ThresholdBase.html
@@ -97,21 +97,21 @@
        <tr>
          <td>Jaicie</td>
          <td>Yes</td>
-         <td>Brown</td>
+         <td>Not pale</td>
          <td>Yes</td>
        </tr>
        <tr>
          <td>Brian</td>
          <td>No</td>
          <td>Pale</td>
-         <td>no</td>
+         <td>No</td>
        </tr>
      </tbody>
      <tfoot>
        <tr>
          <td>Khyre</td>
          <td>No</td>
-         <td>Brown</td>
+         <td>Not pale</td>
          <td>Yes</td>
        </tr>
      </tfoot>
